iptables.rules
# Generated by iptables-save v1.4.21 on Tue Feb 21 11:38:11 2017
*filter
:INPUT ACCEPT [1:40]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [104:9384]
-A INPUT -i et0 -p tcp -m tcp --dport 9418 -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i et0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i et0 -p udp -m udp --sport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 995 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 110 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 465 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 587 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 25 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p udp -m udp --sport 123 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 1024:65535 --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --sport 1024:65535 --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i et0 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 100/sec -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -i et0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A INPUT -i et0 -f -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -i et0 -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -i et0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "NULL Packets"
-A INPUT -i et0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -i et0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "DEFAULT DROP"
-A OUTPUT -o et0 -p tcp -m tcp --dport 9418 -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --dport 995 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --dport 110 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --dport 465 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --dport 587 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --sport 443 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p tcp -m tcp --sport 80 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o et0 -p udp -m udp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o et0 -p udp -m udp --dport 53 -j ACCEPT
COMMIT
# Completed on Tue Feb 21 11:38:11 2017
